[package]
name = "cardamom"
description = "Command-line interface for contact management and synchronization"
authors = ["soywod <clement.douin@posteo.net>"]
version = "0.1.0"
edition = "2021"
license-file = "../LICENSE"
readme = "../README.md"
categories = ["command-line-interface", "command-line-utilities", "email"]
keywords = ["cli", "mail", "email", "client", "imap"]
homepage = "https://github.com/soywod/cardamom/wiki"
documentation = "https://github.com/soywod/cardamom/wiki"
repository = "https://github.com/soywod/cardamom"

[package.metadata.deb]
priority = "optional"
section = "mail"

[dependencies]
anyhow = "1.0.44"
cardamom-lib = { path = "../lib" }
atty = "0.2.14"
clap = { version = "2.33.3", default-features = false, features = ["suggestions", "color"] }
env_logger = "0.8.3"
log = "0.4.14"
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.61"
shellexpand = "2.1.0"
termcolor = "1.1"
terminal_size = "0.1.15"
toml = "0.5.8"
tree_magic = "0.2.3"
unicode-width = "0.1.7"
