[package]
name = "cardamom-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "=0.4.19"
log = "0.4.14"
quick-xml = { version = "=0.22.0", features = ["serialize"] }
reqwest = { version = "=0.11.9", features = ["blocking"] }
serde = { version = "=1.0.136", features = ["derive"] }
serde_json = "=1.0.79"
thiserror = "=1.0.30"
url = "=2.2.2"
